remove image tag

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "portfolio",
   "version": "0.0.1",
-  "description": "A Quasar Project",
+  "description": "Front End Developer",
   "productName": "portfolio",
   "author": "juiamchdo <juliamachado226@gmail.com>",
   "private": true,
